# ion

./: .dockerignore  .env.deploy  .env.example  .env.template  .gitattributes  .gitignore  CHANGELOG.md  Dockerfile  RANGE.md  README.md  SECURITY_ASSESSMENT.md  SETUP.md  check_status.ps1  cleanup_test_data.py  cookies.txt  docker-compose.dev.yml  docker-compose.range.yml  docker-compose.test.yml  docker-compose.yml  docker-entrypoint.sh  download_memes.py  generate_memes.py  migrate_to_postgres.py  pyproject.toml  reorganize_kb.py  restore_kb_collections.py  seed_alerts.py  seed_all.py  seed_cyab_systems.py  seed_forensic_playbooks.py  seed_ion_data.py  seed_ixion_data.py  seed_knowledge_base.py  seed_knowledge_base_blueteam.py  seed_knowledge_base_foundations.py  seed_knowledge_base_security_fundamentals.py  seed_network_assets.py  seed_observables.py  seed_playbooks.py  seed_real_alerts.py  (+18 more)
.ixion/: config.json
deploy/: DEPLOYMENT_GUIDE.md  ELASTICSEARCH_INTEGRATION.md  MITRE_ATTACK_INTEGRATION.md  OPENCTI_INTEGRATION.md  docker-compose.elk.yml  docker-compose.https.yml  docker-compose.yml  generate-certs.sh
docs/: CyAB_SAL.md  SOC_TEMPLATES.md
frontend/: fix_headers.py  port_templates.py  tailwind.input.css  upgrade_headers.py
loadtest/: baseline_50_stats.csv  baseline_50_stats_history.csv  baseline_stats.csv  baseline_stats_history.csv  locustfile.py  run_100u_authfix_stats.csv  run_100u_authfix_stats_history.csv  run_100u_stats.csv  run_100u_stats_history.csv  run_4workers_stats_history.csv  run_50_4workers.csv  run_50u_authfix_stats.csv  run_with_slowlog_stats.csv  (+2 more)
(+599 files in other folders)
