[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ion"
version = "0.9.23"
description = "Intelligent Operating Network - Security Operations Portal for Guarded Glass"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Guarded Glass Team"}
]
dependencies = [
    "typer[all]>=0.9.0",
    "sqlalchemy>=2.0",
    "jinja2>=3.1",
    "python-docx>=1.1",
    "markdown>=3.5",
    "beautifulsoup4>=4.12",
    "rich>=13.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "python-multipart>=0.0.6",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0.0,<4.1",
    "python-jose[cryptography]>=3.3.0",
    "httpx>=0.25.0",
    "slowapi>=0.1.9",
    "ecs-logging>=2.0.0",
    "python-json-logger>=2.0.0",
    # System monitoring
    "psutil>=5.9.0",
    # PCAP parsing
    "dpkt>=1.9.8",
    # PostgreSQL support
    "psycopg2-binary>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff",
    "mypy",
]

[project.scripts]
ion = "ion.cli.main:app"
ion-web = "ion.web.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ion = ["web/static/**/*", "web/templates/**/*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
